Add a few explanatory notes in source of demo.html, as suggested by Carles Pina.  Could use more complete explanation of style-based formatting in the manual, but at least this provides a heads-up.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -91,7 +91,21 @@
        name="citation_cad">[cite]</span>
     </p>
     <h2>References</h2>
-	<div class="hangindent" id="chicago_author_date">[Sorry, the bibliography processor requires a browser with Javascript enabled.]</div>
+	<div class="hangindent" id="chicago_author_date"><!--
+
+        NOTE: The "hangindent" class is a shortcut hack used
+        to display this specific page, which uses a static
+        set of known styles.  Where styles can be dynamically
+        assigned, the webserver or application should define
+        a set of appropriate style classes, and provide them
+        to the target rendering engine along with the processor
+        output.  For guidance, see the relevant section of the
+        processor manual:
+
+          http://gsl-nagoya-u.net/http/pub/citeproc-doc.html#return-value
+
+        -->
+[Page generation failure.  The bibliography processor requires a browser with Javascript enabled.]</div>
 
     <div class="heading pagebreak">
        Bluebook + Chicago Fullnote Bibliography
@@ -153,16 +167,16 @@
     </div>
     <h2>Bibliography</h2>
 	<h3>Legal Resources</h3>
-	<div class="hangindent" id="bluebook_demo_legal_stuff"></div>
+	<div class="hangindent" id="bluebook_demo_legal_stuff"><!-- See NOTE above --></div>
 	<h3>Books</h3>
-	<div class="hangindent" id="bluebook_demo_books"></div>
+	<div class="hangindent" id="bluebook_demo_books"><!-- See NOTE above --></div>
 	<h3>Articles</h3>
-	<div class="hangindent" id="bluebook_demo_articles"></div>
+	<div class="hangindent" id="bluebook_demo_articles"><!-- See NOTE above --></div>
 	
     <div class="heading pagebreak">
        Per-author publication listing
     </div>
-    <div class="dateindent">
+    <div class="dateindent"><!-- See NOTE above -->
   	  <div id="chicago_author_date_listing"></div>
 	</div>
 
