--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="./primitive.css" />
 	<script type="text/javascript" src="./loadabbrevs.js"></script>
-	<script type="text/javascript" src="./xmle4x.js"></script>
+    <script type="text/javascript; e4x=1" src="./xmle4x.js"></script> 
 	<script type="text/javascript" src="./xmldom.js"></script>
 	<script type="text/javascript" src="./citeproc.js"></script>
 	<script type="text/javascript" src="./loadlocale.js"></script>
