Add APA to demo page to test reported failure.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -191,5 +191,10 @@
     </div>
 	<div id="chicago_fullnote_bibliography2">[Placeholder]</div>
 	
+    <div class="heading pagebreak">
+       Test of WebKit bug
+    </div>
+	<div id="apa_x2">[Placeholder]</div>
+	
   </body>
 </html>
