Demo page runs now to generate a simple bibliography

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -33,7 +33,7 @@
         <hr/>
 
         <h2>Bibliography: Chicago Manual of Style (Full Note)</h2>
-        <div class="bibliography pass-1" id="chicago-fullnote-bibliography">
+        <div class="simple-bibliography" id="chicago-fullnote-bibliography">
         </div>
 
       </div>
