License boilerplate and stuff for demo code

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/simple-grid.css"/>
 	<link rel="stylesheet" type="text/css" href="local.css" />
-	<script type="text/javascript" src="citeproc-dom.js"></script>
+	<script type="text/javascript" src="citeproc_generic.js"></script>
 	<script type="text/javascript" src="sys.js"></script>
 	<script type="text/javascript" src="builder.js"></script>
 	<script type="text/javascript" src="runner.js"></script>
